--- a/media.html
+++ b/media.html
@@ -7,18 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(a,b,c){var d=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var f=a[b]+"MaxTouchPoints";if(f in navigator&&navigator[f])return!0}try{return document.createEvent("TouchEvent"),!0}catch(d){}return!1}(),g=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var f=b[c];f.charAt(0)==" ";)f=f.substring(1,f.length);if(f.indexOf(a)==
+0)return f.substring(a.length,f.length)}return null};if(g("inbrowserediting")!="true"){var f,g=g("devicelock");g=="phone"&&c?f=c:g=="tablet"&&b&&(f=b);if(g!=a&&!f)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&c?f=c:window.matchMedia("(max-device-width: 960px)").matches&&b&&d&&(f=b);else{var a=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),g=window.screen.systemXDPI||0,i=window.screen.systemYDPI||0,g=g>0&&i>0?Math.min(screen.width/g,screen.height/i):
+0;(a<=370||g!=0&&g<=3)&&c?f=c:a<=960&&b&&d&&(f=b)}if(f)document.location=f+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/media.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "media.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "media.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://SpartanHackers.com/phone/media.html"/>
   <title>media</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3781405349"/>
-  <link rel="stylesheet" type="text/css" href="css/media.css?crc=3862507789" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/media.css?crc=4192483363" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -38,7 +44,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <a class="nonblock nontext clip_frame" id="u270" href="index.html"><!-- svg --><img class="svg svg_mar" id="u265" src="images/sh-logo.svg?crc=459609236" onload="this.style.height=(this.offsetWidth*80.18803418803414/177.01886792452825)+'px'" alt="" data-mu-svgfallback="images/sh%20logo_poster_.png?crc=176574039" data-image-width="177" data-image-height="80"/></a>
-   <a class="nonblock nontext rgba-background clearfix grpelem" id="u1062-4" href="photos.html"><!-- content --><p>Photos</p></a>
+   <a class="nonblock nontext shadow rgba-background rounded-corners clearfix grpelem" id="u1062-4" href="photos.html"><!-- content --><p>Photos</p></a>
    <nav class="MenuBar clearfix" id="menuu94"><!-- horizontal box -->
     <div class="MenuItemContainer borderbox clearfix grpelem" id="u95"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u96" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u98-4"><!-- rasterized frame --><div id="u98-4_clip"><img alt="Home" src="images/u98-4.png?crc=415363485" data-image-width="199"/></div></div></a>
@@ -62,7 +68,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </nav>
-   <a class="nonblock nontext rgba-background clearfix grpelem" id="u1065-4" href="videos.html"><!-- content --><p>Videos</p></a>
+   <a class="nonblock nontext shadow rgba-background rounded-corners clearfix grpelem" id="u1065-4" href="videos.html"><!-- content --><p>Videos</p></a>
    <div class="verticalspacer" data-offset-top="394" data-content-above-spacer="398" data-content-below-spacer="208"></div>
   </div>
   <!-- Other scripts -->
