--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
   <link media="only screen and (max-width: 370px)" rel="alternate" href="http://SpartanHackers.com/phone/index.html"/>
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3781405349"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4209865820" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=9150214" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -44,9 +44,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <a class="nonblock nontext MuseLinkActive clip_frame" id="u270" href="index.html"><!-- svg --><img class="svg svg_mar" id="u265" src="images/sh-logo.svg?crc=459609236" onload="this.style.height=(this.offsetWidth*80.18803418803414/177.01886792452825)+'px'" alt="" data-mu-svgfallback="images/sh%20logo_poster_.png?crc=176574039" data-image-width="177" data-image-height="80"/></a>
-   <div class="shadow rgba-background rounded-corners clearfix grpelem" id="u706-4"><!-- content -->
-    <p>Welcome to Spartan Hackers Website</p>
-   </div>
+   <img class="grpelem" id="u706-4" alt="Welcome to Spartan Hackers Website" src="images/u706-4.png?crc=444770488" data-image-width="1395"/><!-- rasterized frame -->
    <nav class="MenuBar clearfix" id="menuu94"><!-- horizontal box -->
     <div class="MenuItemContainer borderbox clearfix grpelem" id="u95"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox rgba-background clearfix colelem" id="u96" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u98-4"><!-- rasterized frame --><div id="u98-4_clip"><img alt="Home" src="images/u98-4.png?crc=415363485" data-image-width="199"/></div></div></a>
@@ -70,7 +68,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </nav>
-   <div class="verticalspacer" data-offset-top="515" data-content-above-spacer="519" data-content-below-spacer="87"></div>
+   <div class="verticalspacer" data-offset-top="515" data-content-above-spacer="604" data-content-below-spacer="87"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
