--- a/phone/index.html
+++ b/phone/index.html
@@ -11,27 +11,52 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
   <link rel="canonical" href="http://SpartanHackers.com/index.html"/>
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=381628658"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=412859757" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3765798260"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=200299337" id="pagesheet"/>
+  <!-- JS includes -->
+  <!--[if lt IE 9]>
+  <script src="../scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
+  <![endif]-->
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="browser_width colelem" id="u2537-bw">
-    <div class="clearfix" id="u2537"><!-- group -->
-     <div class="clip_frame grpelem" id="u2540"><!-- image -->
-      <img class="block" id="u2540_img" src="../images/spartan%20hakers%202%20no%20rgb2.png?crc=4079781346" alt="" data-image-width="131" data-image-height="59"/>
+  <div class="clearfix borderbox" id="page"><!-- group -->
+   <div class="SlideShowWidget clearfix HeroFillFrame grpelem" id="slideshowu2764"><!-- none box -->
+    &nbsp;
+    <div class="popup_anchor" id="u2783popup">
+     <div class="SlideShowContentPanel clearfix fullscreen" id="u2783"><!-- stack box -->
+      <div class="SSSlide clip_frame fullscreen" id="u2788"><!-- image -->
+       <img class="ImageInclude" id="u2788_img" data-src="../images/img_20170324_202832000-1-.jpg?crc=3859644849" src="../images/blank.gif?crc=4208392903" alt="" data-width="762" data-height="570"/>
+      </div>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="570" data-content-below-spacer="0"></div>
+   <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u2540" href="index.html"><!-- image --><img class="block" id="u2540_img" src="../images/spartan%20hakers%202%20no%20rgb2.png?crc=4079781346" alt="" data-image-width="131" data-image-height="59"/></a>
+   <nav class="MenuBar clearfix grpelem" id="menuu2550"><!-- vertical box -->
+    <div class="MenuItemContainer borderbox clearfix colelem" id="u2551"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox rgba-background clearfix grpelem" id="u2552" href="index.html"><!-- horizontal box --><div class="MenuItemLabel grpelem" id="u2553-4"><!-- rasterized frame --><div id="u2553-4_clip"><img alt="Home" src="../images/u2553-4.png?crc=425113258" data-image-width="353"/></div></div></a>
+    </div>
+    <div class="MenuItemContainer borderbox clearfix colelem" id="u2558"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u2559" href="events.html"><!-- horizontal box --><div class="MenuItemLabel grpelem" id="u2562-4"><!-- rasterized frame --><div id="u2562-4_clip"><img alt="events" src="../images/u2562-4.png?crc=3810859261" data-image-width="353"/></div></div></a>
+    </div>
+    <div class="MenuItemContainer borderbox clearfix colelem" id="u2595"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u2598" href="about.html"><!-- horizontal box --><div class="MenuItemLabel grpelem" id="u2600-4"><!-- rasterized frame --><div id="u2600-4_clip"><img alt="About" src="../images/u2600-4.png?crc=82945671" data-image-width="353"/></div></div></a>
+    </div>
+    <div class="MenuItemContainer borderbox clearfix colelem" id="u2624"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u2627" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel grpelem" id="u2628-4"><!-- rasterized frame --><div id="u2628-4_clip"><img alt="Contact" src="../images/u2628-4.png?crc=3975354921" data-image-width="353"/></div></div></a>
+    </div>
+    <div class="MenuItemContainer borderbox clearfix colelem" id="u2652"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u2653" href="media.html"><!-- horizontal box --><div class="MenuItemLabel grpelem" id="u2655-4"><!-- rasterized frame --><div id="u2655-4_clip"><img alt="media" src="../images/u2655-4.png?crc=4220404312" data-image-width="353"/></div></div></a>
+    </div>
+   </nav>
+   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="451" data-content-below-spacer="570"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -39,13 +64,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","museutils","whatinput","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","museutils","whatinput","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.musemenu","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
-Muse.Utils.resizeHeight('.browser_width');/* resize height */
-Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.fullPage('#page');/* 100% height page */
+Muse.Utils.initWidget('#slideshowu2764', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'horizontal',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'fullScreen',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu2764 */
+Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
