fixed overflow in contact form

--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4130108508"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=4147858161" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3899127767" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3893296755"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=29386135" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=4148516198" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -50,7 +50,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <a class="nonblock nontext clip_frame" id="u270" href="index.html"><!-- svg --><img class="svg svg_mar temp_no_img_src" id="u265" data-orig-src="images/sh-logo.svg?crc=459609236" onload="this.style.height=(this.offsetWidth*80.18803418803414/177.01886792452825)+'px'" alt="" data-mu-svgfallback="images/sh%20logo_poster_.png?crc=176574039" data-image-width="177" data-image-height="80" src="images/blank.gif?crc=4208392903"/></a>
-    <div class="clearfix grpelem" id="pu4968"><!-- group -->
+    <div class="clearfix grpelem" id="u5204"><!-- group -->
      <div class="rgba-background grpelem shared_content" id="u4968" data-content-guid="u4968_content"><!-- simple frame --></div>
      <form class="form-grp clearfix grpelem" id="widgetu746" method="post" enctype="multipart/form-data" action="scripts/form-u746.php"><!-- none box -->
       <div class="fld-grp clearfix grpelem" id="widgetu751" data-required="true"><!-- none box -->
@@ -114,7 +114,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <a class="nonblock nontext clip_frame temp_no_id" href="index.html" data-orig-id="u270"><!-- svg --><img class="svg svg_mar temp_no_id temp_no_img_src" data-orig-src="images/sh-logo.svg?crc=459609236" onload="this.style.height=(this.offsetWidth*40.51166310541307/89.43140723270439)+'px'" alt="" data-mu-svgfallback="images/sh%20logo_poster_.png?crc=176574039" data-image-width="89" data-image-height="41" data-orig-id="u265" src="images/blank.gif?crc=4208392903"/></a>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu4968"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="u5204"><!-- group -->
      <span class="rgba-background grpelem placeholder" data-placeholder-for="u4968_content"><!-- placeholder node --></span>
      <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="scripts/form-u746.php" data-orig-id="widgetu746"><!-- none box -->
       <div class="fld-grp clearfix grpelem temp_no_id" data-required="true" data-orig-id="widgetu751"><!-- none box -->
